ingress_demo_2/webserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "webserver-ingress"
  namespace: "2048-game"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip               //define this annotation to register pod IP as a target in place of instances.
  labels:
    app: webserver-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "service-frontend"
              servicePort: 80
          - path: /frontend
            backend:
              serviceName: "service-frontend"
              servicePort: 80
